# tfm

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  config.py  pyproject.toml
backend/explorer/: README.md  main.py
backend/explorer/models/: blockchains.py  provider_options.py  resource_types.py
backend/explorer/providers/: provider.py  provider_factory.py  providerfactory.py  validator.py
backend/explorer/providers/eth/: config.py  eth_provider.py  provider.py  validator.py
backend/explorer/routers/: address.py  blockchains.py  blocks.py  search.py  summary.py  transactions.py
backend/explorer/services/: coinmarketcap_service.py  config.py  fetch_service.py
backend/src/: explorer_setup.py  main.py
backend/src/routers/: address.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: config.ts  index.tsx
frontend/src/Models/: Address.ts  Block.ts  Transactions.ts
frontend/src/components/Address/: index.tsx
frontend/src/components/App/: index.tsx
frontend/src/components/BlockDetails/: index.tsx
frontend/src/components/Blocks/: index.tsx
frontend/src/components/Error/: index.tsx
frontend/src/components/Loading/: index.tsx  styles.css
frontend/src/components/Nav/: index.tsx
frontend/src/components/NavSearch/: index.tsx
frontend/src/components/NetworksList/: index.tsx
frontend/src/components/Summary/: index.tsx  styles.css
frontend/src/components/TransactionDetails/: index.tsx
frontend/src/contexts/: appContext.tsx
(+10 files in other folders)
