[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sdominguez894 <sdominguez894@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
multichain-explorer = "^0.1.6"

terra-proto = "1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"